results will no longer show off screen

--- a/fencing/static/css/main-styles.css
+++ b/fencing/static/css/main-styles.css
@@ -347,7 +347,7 @@ span.twitter-typeahead .tt-suggestion {
   font-weight: normal;
   line-height: 1.42857143;
   color: #333333;
-  white-space: nowrap;
+  white-space: normal;
 }
 span.twitter-typeahead .tt-suggestion.tt-cursor,
 span.twitter-typeahead .tt-suggestion:hover,
@@ -358,14 +358,12 @@ span.twitter-typeahead .tt-suggestion:focus {
   background-color: #337ab7;
 }
 .input-group.input-group-lg span.twitter-typeahead .form-control {
-  height: 46px;
   padding: 10px 16px;
   font-size: 18px;
   line-height: 1.3333333;
   border-radius: 6px;
 }
 .input-group.input-group-sm span.twitter-typeahead .form-control {
-  height: 30px;
   padding: 5px 10px;
   font-size: 12px;
   line-height: 1.5;
@@ -376,7 +374,6 @@ span.twitter-typeahead {
 }
 .input-group span.twitter-typeahead {
   display: block;
-  height: 34px;
 }
 .input-group span.twitter-typeahead .tt-menu,
 .input-group span.twitter-typeahead .tt-dropdown-menu {
@@ -397,16 +394,15 @@ span.twitter-typeahead {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-.input-group.input-group-sm span.twitter-typeahead {
-  height: 30px;
-}
+
+.twitter-typeahead, .tt-hint, .tt-input, .tt-menu { 
+  width: 100%;
+ }
 .input-group.input-group-sm span.twitter-typeahead .tt-menu,
 .input-group.input-group-sm span.twitter-typeahead .tt-dropdown-menu {
   top: 30px !important;
 }
-.input-group.input-group-lg span.twitter-typeahead {
-  height: 46px;
-}
+
 .input-group.input-group-lg span.twitter-typeahead .tt-menu,
 .input-group.input-group-lg span.twitter-typeahead .tt-dropdown-menu {
   top: 46px !important;
